--- a/frontend/src/components/beforeLogin/navbar/Navbar.css
+++ b/frontend/src/components/beforeLogin/navbar/Navbar.css
@@ -3,7 +3,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    z-index: 3;
+    z-index: 1100;
+    position: relative;
 }
 
 .navbar__s1 {
